fix for: https://issues.apache.org/jira/browse/AMQ-1942
git-svn-id: https://svn.apache.org/repos/asf/activemq/trunk@1157433 13f79535-47bb-0310-9956-ffa450edef68